--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -62,7 +62,7 @@
         </div>
     </nav>
     <div class="container-fluid">
-        <div class="jumbotron">
+        <div class="jumbotron mb-0">
             <h1 class="display-4">Northwind</h1>
             <p class="lead">We have the best prices and selection of high quality foods and beverages on the planet! Check out our featured discounts below!</p>
             <hr class="my-4">
@@ -79,7 +79,7 @@
                 You don't want to make Chef Anton mad, do you?
             </div>
             <i>Discount expires: 2/25/2020</i><br />
-            <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
+            <a href="#" class="code"  data-code="1234" data-product="Chef Anton's Italian Seasoning"><i class="far fa-hand-point-right"></i> Discount Code</a>
         </div>
         <div class="col-md m-3 p-3 discounts">
             <h3>Go Green</h3>
@@ -87,7 +87,7 @@
                 Genen Shouyu goes on sale very rarely. Order now to save 10% off our already low price!
             </div>
             <i>Discount expires: 2/25/2020</i><br />
-            <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
+            <a href="#" class="code" data-code="2222" data-product="Genen Shouyu"><i class="far fa-hand-point-right"></i> Discount Code</a>
         </div>
         <div class="col-md m-3 p-3 discounts">
             <h3>Half Price</h3>
@@ -95,7 +95,7 @@
                 Just because you can't pronounce "Schoggi Shokolade" doesn't mean you shouldn't buy it. Get it now for 50% off!
             </div>
             <i>Discount expires: 2/25/2020</i><br />
-            <a href="#" class="code"><i class="far fa-hand-point-right"></i> Discount Code</a>
+            <a href="#" class="code" data-code="2122" data-product="Schoggi Schokolade"><i class="far fa-hand-point-right"></i> Discount Code</a>
         </div>
     </div>
 
