--- a/wwwroot/balloons.html
+++ b/wwwroot/balloons.html
@@ -6,15 +6,46 @@
     <title>Balloons</title>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!-- animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Londrina+Shadow|Questrial" rel="stylesheet">
+    <!--Local-->
     <link rel="stylesheet" href="css/StyleSheet.css" />
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/default.date.css" />
+    <style>
+        h1 {
+            font-family: 'Londrina Shadow';
+            color: slategray;
+            font-size: 3.5em;
+        }
+
+        body {
+            font-family: 'Questrial';
+        }
+        h1.animated {
+            display: inline-block;
+        }
+        .ball { visibility: hidden; }
+    </style>
 </head>
 <body>
-
+<!-- toast -->
+<div id="toast" class="toast">
+    <div class="toast-header">
+        <strong class="mr-auto" id="product">Product Name</strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="toast-body">
+        Discount Code: <strong id="code">CODE</strong>
+    </div>
+</div>
     <!-- content -->
     <div class="container">
-        <h1>Happy Birthday!</h1><hr />
+        <h1 class="animated" id="change">Happy Birthday!</h1><hr />
         <form role="form">
             <div class="row">
                 <div class="col-sm">
@@ -26,14 +57,42 @@
                         <label for="birthday">Birthday</label>
                         <input type="text" class="form-control" id="birthday" placeholder="Enter birthday" />
                     </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Select your favorite balloons</h5>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="red">
+                                <label class="form-check-label" data-color="#ff0000" for="red">Red balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="green">
+                                <label class="form-check-label" data-color="#00b300" for="green">Green balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="blue">
+                                <label class="form-check-label" data-color="#0000ff" for="blue">Blue balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="purple">
+                                <label class="form-check-label" data-color="#800080" for="purple">Purple balloons</label>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-outline-primary mt-3" id="submit">Submit</button>
+                    <button type="button" class="btn btn-outline-primary mt-3" id="boxes">Check All Boxes</button>
+                    <button type="button" class="btn btn-outline-primary mt-3" id="noBoxes">Uncheck All Boxes</button>
+
                 </div>
+
                 <div class="col-sm">
                     <img src="media/red.png" class="ball" alt="red balloon" id="redImg" />
                     <img src="media/green.png" class="ball" alt="green balloon" id="greenImg" />
                     <img src="media/blue.png" class="ball" alt="blue balloon" id="blueImg" />
+                    <img src="media/purple.png" class="ball" alt="purple balloon" id="purpleImg" />
                 </div>
             </div>
         </form>
+
     </div>
 
     <!-- jQuery -->
@@ -45,7 +104,7 @@
     <script src="js/client.js"></script>
     <script src="/js/picker.js"></script>
     <script src="/js/picker.date.js"></script>
-<script src="js/balloons.js"></script>
+    <script src="js/balloons.js"></script>
 
 </body>
 </html>
