--- a/wwwroot/balloons.html
+++ b/wwwroot/balloons.html
@@ -34,13 +34,13 @@
 <!-- toast -->
 <div id="toast" class="toast">
     <div class="toast-header">
-        <strong class="mr-auto" id="product">Product Name</strong>
+        <strong class="mr-auto" id="product">You forgot to pick balloons!</strong>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="toast-body">
-        Discount Code: <strong id="code">CODE</strong>
+        <strong id="code">You need balloons for your birthday!</strong>
     </div>
 </div>
     <!-- content -->
@@ -74,7 +74,35 @@
                             </div>
                             <div class="form-group form-check">
                                 <input type="checkbox" class="form-check-input" id="purple">
-                                <label class="form-check-label" data-color="#800080" for="purple">Purple balloons</label>
+                                <label class="form-check-label" data-color="#b30086" for="purple">Purple balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="silver">
+                                <label class="form-check-label" data-color="#d9d9d9" for="silver">Silver balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="pink">
+                                <label class="form-check-label" data-color="#ff99aa" for="pink">Pink balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="orange">
+                                <label class="form-check-label" data-color="#ff6600" for="orange">Orange balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="blue-green">
+                                <label class="form-check-label" data-color="#33cccc" for="blue-green">Blue-green balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="black">
+                                <label class="form-check-label" data-color="#333333" for="black">Black balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="brown">
+                                <label class="form-check-label" data-color="#a52a2a" for="brown">Brown balloons</label>
+                            </div>
+                            <div class="form-group form-check">
+                                <input type="checkbox" class="form-check-input" id="yellow">
+                                <label class="form-check-label" data-color="#ffff00" for="yellow">Yellow balloons</label>
                             </div>
                         </div>
                     </div>
@@ -89,6 +117,13 @@
                     <img src="media/green.png" class="ball" alt="green balloon" id="greenImg" />
                     <img src="media/blue.png" class="ball" alt="blue balloon" id="blueImg" />
                     <img src="media/purple.png" class="ball" alt="purple balloon" id="purpleImg" />
+                    <img src="media/silver.png" class="ball" alt="silver balloon" id="silverImg" />
+                    <img src="media/orange.png" class="ball" alt="orange balloon" id="orangeImg" />
+                    <img src="media/blue_green.png" class="ball" alt="blue_green balloon" id="blue-greenImg" />
+                    <img src="media/pink.png" class="ball" alt="pink balloon" id="pinkImg" />
+                    <img src="media/black.png" class="ball" alt="black balloon" id="blackImg" />
+                    <img src="media/brown.png" class="ball" alt="brown balloon" id="brownImg" />
+                    <img src="media/yellow.png" class="ball" alt="yellow balloon" id="yellowImg" />
                 </div>
             </div>
         </form>
